[UPDATE]: use fixed input font size to prevent auto zoom on mobile devices

--- a/src/Components/Button/styles.scss
+++ b/src/Components/Button/styles.scss
@@ -13,6 +13,7 @@ $disabled-base1: #888;
   margin: 0.2rem;
   -webkit-appearance: none;
   appearance: none;
+  user-select: none;
 
   &:hover {
     background: #fff;
