--- a/src/Components/Input/styles.scss
+++ b/src/Components/Input/styles.scss
@@ -15,7 +15,7 @@
     display: block;
     width: 100%;
     background: none;
-    font-size: 1rem;
+    font-size: 16px;
     padding: 0.6rem 0.6rem 0.6rem 0.3rem;
     border: none;
     border-radius: 0;
